[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/UI & misc/form/Form.gd" type="Script" id=2]
[ext_resource path="res://resources/illustrations/coins silver.png" type="Texture" id=3]
[ext_resource path="res://themes/Buttons_white+Black.tres" type="Theme" id=6]
[ext_resource path="res://themes/option+button_Red.tres" type="Theme" id=7]

[node name="form" type="CanvasLayer"]
layer = 2
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
margin_left = -218.0
margin_right = 1272.0
margin_bottom = 417.0
mouse_filter = 2
color = Color( 0.686275, 0.686275, 0.686275, 1 )

[node name="TextureRect" type="TextureRect" parent="."]
self_modulate = Color( 1, 1, 1, 0.564706 )
margin_left = 486.445
margin_top = 51.7433
margin_right = 899.445
margin_bottom = 394.743
mouse_filter = 2
texture = ExtResource( 3 )

[node name="ui" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -874.858
margin_top = -370.556
margin_right = 149.143
margin_bottom = 229.444
rect_scale = Vector2( 2, 2 )
mouse_filter = 2

[node name="grid" type="GridContainer" parent="ui"]
margin_left = 316.0
margin_top = 149.0
margin_right = 416.0
margin_bottom = 219.0
rect_scale = Vector2( 2.12613, 2.12613 )
mouse_filter = 2
columns = 2

[node name="label_spacer3" type="Label" parent="ui/grid"]
margin_right = 117.0
margin_bottom = 14.0

[node name="label_spacer" type="Label" parent="ui/grid"]
margin_left = 121.0
margin_right = 121.0
margin_bottom = 14.0

[node name="play" type="Button" parent="ui/grid"]
margin_top = 18.0
margin_right = 117.0
margin_bottom = 57.0
theme = ExtResource( 6 )
text = "Play!"

[node name="label_spacer2" type="Label" parent="ui/grid"]
margin_left = 121.0
margin_top = 30.0
margin_right = 121.0
margin_bottom = 44.0

[node name="language" type="OptionButton" parent="ui/grid"]
margin_top = 61.0
margin_right = 117.0
margin_bottom = 81.0
theme = ExtResource( 7 )
text = "Languague"

[connection signal="pressed" from="ui/grid/play" to="." method="_on_play_pressed"]
